# seqan

./: .travis.yml
apps/bs_tools/: bisar.h  bisar_base.h  casbar.cpp  casbar.h  casbar_calling.h  casbar_consensus_realign.h  casbar_realignment.h
apps/fiona/: compute_gain.cpp  error_rate_from_sam.cpp  fiona.cpp
apps/fx_tools/: fx_bam_coverage.cpp
apps/gustaf/: create_stellarmatches_from_file.h  gustaf_matepairs.h  join_mates.cpp  msplazer.h  msplazer_algorithms.h  msplazer_main.h  msplazer_out.h  stellar_routines.h
apps/insegt/: base.h  create_gff.h  fusion.h  overlap_module.h
apps/mason2/: CMakeLists.txt  external_split_merge.cpp  external_split_merge.h  fragment_generation.h  gap_projection.h  genomic_variants.cpp  genomic_variants.h  individual_genome.h  mason_frag_sequencing.cpp  mason_simulator.cpp  mason_splicing.cpp  mason_tests.cpp  mason_variator.cpp  methylation_levels.h  vcf_materialization.cpp
apps/micro_razers/: outputFormat.h
apps/ngs_roi/: bam2roi.cpp  project_interval.cpp  project_spliced.cpp  roi_builder.cpp  roi_builder.h  roi_feature_projection.cpp
apps/pair_align/lib/: pair_align_lib.h
apps/rabema/: curve_smoothing.h  io_gsi.h  rabema_build_gold_standard.cpp  rabema_evaluate.cpp  ref_id_mapping.h
apps/razers/: outputFormat.h  razers.cpp  razers.h  razers_matepairs.h  razers_spliced.h  readSimulator.h
apps/razers2/: outputFormat.h  paramChooser.h  razers.h  razers_matepairs.h  readSimulator.h
apps/razers3/: job_queue.h  outputFormat.h  parallel_job_queue.h  profile_timeline.h  razers.cpp  razers.h  razers_match_filter.h  razers_matepairs.h  razers_matepairs_parallel.h  razers_paired_match_filter.h  razers_parallel.h  razers_window.h  readSimulator.h  simulate_reads.cpp
apps/rep_sep/: assembly_parser.h  column_scanner.h  rep_sep.cpp  rgraph.h  rgraph_base.h  rgraph_construction.h  rgraph_heuristics.h  rgraph_score.h  utils.h
apps/sak/: sak.cpp
apps/sam2matrix/: sam2matrix.cpp
apps/searchjoin/: db.h  finder.h  verifier.h  writer.h
apps/seqan_flexbar/: adapter_trimming.h  demultiplex.h  general_processing.h  read_trimming.h  seqan_flexlib.cpp  test_demultiplex.cpp  test_general_processing.cpp
apps/seqan_tcoffee/: seqan_tcoffee.cpp
apps/seqcons/: seqcons.cpp
apps/seqcons2/: seqcons_app.cpp
apps/snp_store/: snp_store.cpp  snp_store.h
apps/splazers/: outputFormat.h  paramChooser.h  razers.h  razers_matepairs.h  razers_spliced.h  readSimulator.h  splazers.cpp
apps/stellar/: stellar.cpp  stellar.h  stellar_extension.h  stellar_output.h  stellar_types.h
apps/yara/: bits_context.h  bits_hits.h  bits_matches.h  bits_reads.h  bits_seeds.h  find_extender.h  find_verifier.h  mapper.h  mapper_aligner.h  mapper_classifier.h  mapper_collector.h  mapper_extender.h  mapper_filter.h  mapper_ranker.h  mapper_selector.h  mapper_verifier.h  mapper_writer.h  store_seqs.h
core/apps/bambi/: CMakeLists.txt  INFO
core/apps/bambi/bam2fastq/: bam2fastq.cpp  bam_scanner_cache.h  converter_thread.h  io_lock.h  job_queue.h  sequence_sink.h
core/apps/pair_align/: CMakeLists.txt  align_impl.h  pair_align.cpp
core/tests/ucsc_io/: test_ucsc.h
demos/: bam_print_alignments.cpp  bamutil.cpp  benchmark_stream.cpp  filter_sam.cpp  parse_lm_stellar.cpp  sam2svg.cpp  sample_seqs.cpp
demos/misc/: name_store_cache.cpp
demos/seq_io/: fai_index_example.cpp
demos/tutorial/alignments/: alignment_representation_ag.cpp  alignment_representation_ag_assignment1.cpp
demos/tutorial/annotation_store/: assignment_3_solution.cpp
demos/tutorial/bam_io/: example3.cpp  example7.cpp  solution4.cpp
demos/tutorial/bed_io/: solution2.cpp
demos/tutorial/data_journaling/: example_online_search.cpp  example_online_search_assignment1_hint.cpp  solution_online_search_assignment1.cpp  solution_online_search_assignment2.cpp  solution_online_search_assignment3.cpp  solution_online_search_assignment4.cpp  solution_online_search_finder.cpp
demos/tutorial/gff_io/: solution2.cpp
demos/tutorial/indexed_fasta_io/: solution2.cpp
demos/tutorial/rnaseq/: genequant_assignment2.cpp  genequant_assignment3.cpp  genequant_assignment4.cpp  genequant_assignment5.cpp  genequant_solution2.cpp  genequant_solution3.cpp  genequant_solution4.cpp  genequant_solution5.cpp
demos/tutorial/store/: store_access_aligned_reads.cpp  store_access_aligned_reads2.cpp  store_diplay_aligned_reads.cpp
demos/tutorial/string_sets/: assignment_2_solution.cpp
extras/apps/anise/: CMakeLists.txt  rep_sep_demo.cpp
extras/apps/bam_realigner/: CMakeLists.txt  INFO  README.md  bam_realigner.cpp  bam_realigner_app.cpp  bam_realigner_app.h  bam_realigner_options.cpp  bam_realigner_options.h  realigner_step.cpp  realigner_step.h
extras/apps/mason2/: mason_options.h
extras/apps/seqcons2/: CMakeLists.txt  INFO  seqcons.cpp  seqcons_app.cpp  seqcons_options.cpp
extras/include/seqan/: consensus.h
include/seqan/: graph_types.h
manual/: CMakeLists.txt
tests/align/: test_align_align.h  test_align_fragment.h
tests/arg_parse/: test_arg_parse_ctd_support.h
tests/bam_io/: test_bam_file.h  test_read_bam.h  test_read_sam.h  test_write_bam.h  test_write_sam.h
tests/basic/: test_basic_aggregate.h  test_basic_array_construct_destruct.h  test_basic_construct_destruct.h  test_basic_iterator.h  test_basic_smart_pointer_holder.h  test_basic_transport.h  test_basic_type.h
tests/find/: test_find_myers_banded.h
tests/graph_align/: test_graph_impl_align.h  test_graph_match_refinement.h
tests/graph_msa/: test_graph_tcoffee.h
tests/graph_types/: test_graph_types_basic.cpp  test_graph_types_types.cpp  test_graph_types_utils.cpp
tests/index/: test_index_creation.h  test_index_helpers.h
tests/parallel/: test_parallel_queue.h
tests/parse_lm/: test_parse_lm.h
tests/realign/: test_realign.cpp
tests/sequence/: test_segment.h  test_sequence.cpp  test_string.h  test_string_set.h  test_stringset.h
tests/sequence_journaled/: test_sequence_journaled.h
tests/store/: test_store_io.h
util/py_lib/: .lintrc  CMakeLists.txt  termcolor.py
util/travis/: coveralls.sh  linux-cibuild.cmake  linux-cibuild.sh
(+151 files in other folders)
